--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   google_nav_bar: ^5.0.6
   carousel_slider: ^4.1.1
+  http:
 
 dev_dependencies:
   flutter_test:
