--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,8 @@ dependencies:
   google_nav_bar: ^5.0.6
   carousel_slider: ^4.1.1
   http:
-
   provider:
-
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +49,7 @@ flutter:
   assets:
     - assets/img/png/
     - assets/img/jpg/
+    - assets/img/svg/
     - assets/json/car_list.json
 
   uses-material-design: true
