--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   hive_flutter:
   introduction_screen:
   lottie: ^1.4.1
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
