--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.10.0"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/img/png/icon.png"
 
   flutter_lints: ^1.0.0
 
