--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   lottie: ^1.4.1
   google_fonts: ^3.0.1
 
+  google_fonts: ^3.0.1
+
+  smooth_page_indicator:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
