--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  readmore: ^2.0.0
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.1.0
   google_nav_bar: ^5.0.6
